# Robotics-Project

./: README.md  deploy_robot.py  replace_robot.sh  saving_map.sh  start_simulation.sh  test_autonomous.sh  visual_search.sh
limo_base/launch/: limo_sim_base.launch
limo_base/src/: autonomous_nav.py  map_merger.py  multi_robot_wander.py  replace_robot.sh  visual_search.py  visual_search_node.py  wander.py
limo_bringup/launch/: gmapping_single.launch  limo_gmapping.launch  multi_gmapping.launch  multi_robot_gmapping.launch  multi_robot_sim.launch  multi_robot_wander.launch  multi_wander.launch  robot_gmapping.launch  spawn_robot.launch
limo_bringup/rviz/: gmapping.rviz  multi_robot_gmapping.rviz
map/: world3
new_map/: world4
omniv/: CMakeLists.txt  package.xml
omniv/config/: limo_ackerman_control.yaml  rviz_config.rviz  slam_config.yaml
omniv/launch/: ackerman.launch  camera_control.launch  fancy_robot.urdf  image_picker.launch  slam.launch  test_world.launch  test_world3.launch  visual_search.launch  world.launch
omniv/map/: world3
omniv/map/building_editor_models/model4/: model.config
omniv/map/building_editor_models/model7/: model.sdf
omniv/map/model_editor_models/model5/: model.config  model.sdf
omniv/rviz/: model_display.rviz
omniv/src/: autonomous_nav.py  camera_controller.py  image_picker.py  mapping_node.py  robot_controller.py  robot_controller_limo.py  simple_teleop.py  visual_search.py  visual_search_node.py
omniv/urdf/: limo_ackerman.gazebo  limo_ackerman.xacro  limo_gazebo.gazebo  limo_steering_hinge.xacro  limo_xacro.xacro
(+15 files in other folders)
